# jobeco

./: .gitignore  API.md  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_channel_meta.py  0003_channel_tg_id_nullable.py  0004_vacancy_raw_text.py  0006_system_settings.py  0007_admin_users.py  0008_api_keys.py  0009_api_key_owner_expires.py  0010_parser_logs.py  5cc9a3ffecbb_add_channel_enabled.py
apps/: admin_bot.py  blog_posts.py  userbot.py  web_admin.py
docker/: Dockerfile
jobeco/: logging.py  runtime_settings.py  settings.py
jobeco/auth/: passwords.py
jobeco/db/: models.py  session.py
jobeco/openrouter/: _enrich_company.py  client.py
jobeco/parsers/: cryptocurrencyjobs_co.py  cryptojobs.py  degencryptojobs.py  findweb3.py  remocate.py  sailonchain.py  web3career.py
jobeco/processing/: ats_enricher.py  company_branding.py  normalization.py  pipeline.py
jobeco/tg/: login_cli.py  session_manager.py
scripts/: ab_models_test.py  ab_rerun_failed.py  analyze_cryptocurrencyjobs.py  analyze_cryptojobslist.py  backfill_company_logos.py  backfill_normalize.py  scrape_wantapply.py
static/: analytics_studio.js
templates/: _footer.html  about.html  analytics.html  analytics_studio.html  api_docs.html  api_keys.html  base.html  blog.html  blog_post.html  channels.html  companies.html  company_detail.html  dashboard.html  docs.html  graph.html  landing.html  login.html  logs.html  settings.html  vacancies.html  vacancy_detail.html  vacancy_page.html
