[project]
name = "jobeco"
version = "0.1.0"
description = "AI parsing ecosystem for Telegram job posts (Telethon + Aiogram + pgvector + OpenRouter)"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4,<4.0",
  "telethon>=1.34,<2.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "SQLAlchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "alembic>=1.13,<2.0",
  "pgvector>=0.3,<1.0",
  "httpx>=0.27,<1.0",
  "tenacity>=8.2,<10.0",
  "python-dotenv>=1.0,<2.0",
  "structlog>=24.1,<25.0",
  "beautifulsoup4>=4.12,<5.0",
]

[project.scripts]
jobeco-admin-bot = "apps.admin_bot:main"
jobeco-userbot = "apps.userbot:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
